--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -366,14 +366,13 @@ c.Point.X = 10 //匿名未展开，2种方式是一致的
 - vim多行注释，查找替换  
 :20,30 s/^/#/g 第20到30行用 # 注释掉。  
 :20,30 s/^#//g 取消注释  
-:4,10 s/^[^I ]\+// 去掉行首的空白字符  
 用 . 表示当前行。  
 :.,30 s/^/#/g  
 /string （sting为查找对象）正向查找  
 ？string 反向查找  
 ：m,n> 向右移动一个tab  
 ：m,n< 向左移动一个tab  
-vim ~/.vimrc  当前用户vim配置  
+vim \~/.vimrc  当前用户vim配置  
 vim /etc/vim/vimrc 系统vim配置  
 
 - json
@@ -844,7 +843,7 @@ func main() {
 - 方法
     - func (p Point) Distance() float64 表达式p.Disatance称作选择子（为p选择合适的子方法）  
     - Go可以将方法绑定到任何类型上（如数字、字符串、slice、map甚至函数等定义附加行为）
-    - (*Point).ScaleBy，圆括号必须，没有表达式被解析*(Point.ScaleBy)
+    - (\*Point).ScaleBy，圆括号必须，没有表达式被解析*(Point.ScaleBy)
     - 习惯上遵循如果类型的任何一个方法是使用指针接收者，那么所有的该类型的方法都应该使用指针接收（虽然部分方法不一定需要使用指针接收）(2种方式定义的方法都属于该类型的方法)  
     - 本身是指针类型不能作为接收者（假设可以，那么*指针类型是不是跟原有的类型混淆）
 
@@ -1642,7 +1641,7 @@ func mirroredQuery() string {
 }
 ```
 
-- 通道可通过"_, ok := <- 通道名"来判定是否已经关闭，通过close(通道名)的方式，若尝试关闭已经关闭的通道会导致宕机。同时可以通过range方式来做对应的通道接收，通道可通过垃圾回收器回收而不是通过close方式。  
+- 通道可通过"\_, ok := <- 通道名"来判定是否已经关闭，通过close(通道名)的方式，若尝试关闭已经关闭的通道会导致宕机。同时可以通过range方式来做对应的通道接收，通道可通过垃圾回收器回收而不是通过close方式。  
 
 ```go
 package main
@@ -2177,7 +2176,7 @@ func Instance() *singleton {
 
 ### go test工具
 
-以_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在*_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。go test工具扫描*_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。
+以\_test.go结尾的文件不是go build命令编译的目标，而是go test编译的目标。在\*\_test.go文件中，三种函数需要特殊对待（功能测试函数、基准测试函数、示例函数）。go test工具扫描\*\_test.go文件来寻找特殊函数，并生成一个临时的main包来调用它们，然后编译和运行，并汇报结果，最后清空临时文件。
 
 1. 功能测试函数：以`Test`前缀命名的函数，用来检测一些程序逻辑的正确性（go test运行测试函数）  
 2. 基准测试函数：以`Benchmark`开头的函数，用来测试某些操作的性能（go test汇报操作的平均时间）(峰值测试？)  
@@ -2404,9 +2403,11 @@ func main() {
 ### 包和工具
 
 - 正常以“最后一段”作为包名，但有例外：
-    - 如果包包含可行的Go程序（比如main函数），那么包名总是main。这是告诉go build的信号，它必须调用连接器生成可执行文件。
-    - _test.go结尾的测试文件
-    - 有一些依赖管理工具会在包导入路径的尾部追加版本号后缀（如："gopkg.in/yaml.v2",包名不包含后缀，所以包名是yaml）
+    - 如果包包含可行的Go程序（比如main函数），那么包名总是main。这是告诉go build的信号，它必须调用连接器生成可执行文件。  
+    - \_test.go结尾的测试文件  
+    - 有一些依赖管理工具会在包导入路径的尾部追加版本号后缀（如："gopkg.in/yaml.v2",包名不包含后缀，所以包名是yaml） 
+
+- 为了实现reporduceable build（能再生，可再生），`Go1.5`引入了Vendor机制，Go编译器会优先在vendor下搜索依赖的第三方包，这样如果开发者将特定版本的依赖包存放在vendor下面并提交到code repo，那么所有人理论上会等到相同的编译结果，实现reporduceable build。
 
 - 重命名导入（多个包的最后一段是一样的，避免冲突使用重命名）
 
@@ -2503,7 +2504,7 @@ func main() {
 6) CGO在两个不同的Go语言包中，存在一个同名的要导出为C语言函数的add()函数，那么在最终的链接阶段将会出现重名的问题（与C转Go不同）。导出文件`为_cgo_export.h文件`，存C源文件要引用需要导出文件导出后才能使用。
 7）导出C语言接口时，需要保证函数的参数和返回值类型都是C语言友好的类型，同时`返回值不得直接或间接包含Go语言内存空间的指针`。
 
-8）CGO生成的中间文件的简单示意图。包中有4个go文件，nocgo开头的是没有import "C"指令的非cgo文件，mian.go和hello.go是有import "C"的包含CGO代码的go文件，cgo命令会为每个包含cgo代码的go文件创建2个中间文件（main_cgo1.go main_cgo2.c）(hello_cgo1.go hello_cgo2.c)。然后为整个包创建一个Go文件（_cgo_gotypes.go），其中包含Go语言部分辅助代码，此外还会创建一个（_cgo_export.h）文件和一个（_cgo_export.c）文件，对应Go语言导出到C语言的类型和函数
+8）CGO生成的中间文件的简单示意图。包中有4个go文件，nocgo开头的是没有import "C"指令的非cgo文件，mian.go和hello.go是有import "C"的包含CGO代码的go文件，cgo命令会为每个包含cgo代码的go文件创建2个中间文件（main_cgo1.go main_cgo2.c）(hello_cgo1.go hello_cgo2.c)。然后为整个包创建一个Go文件（\_cgo_gotypes.go），其中包含Go语言部分辅助代码，此外还会创建一个（\_cgo_export.h）文件和一个（\_cgo_export.c）文件，对应Go语言导出到C语言的类型和函数
 ![cgo生成的中间文件](https://www.processon.com/view/link/5ee9d9a81e085326372faa6e)
 
 ```Go
