--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -201,3 +201,36 @@ Session与cookie功能效果相同，记录客户状态的机制，区别在于s
 4.**session有效期**：session为服务器的内存，为防止内存溢出，服务器会把长时间内没有活跃的session从内存删除，这个时间就是session的超时时间（可以设置），如果超过这个时间没有再次访问服务器，session失效被删除。    
 
 5.**session能干什么**：session就是服务器的一块内存，内存里面能放任何东西，只要是名值对就可以，session里面的`名字永远都是String类型`。
+
+### HTTP和HTTPS
+
+<https://blog.csdn.net/Chelydra/article/details/99544677>
+
+#### 区别
+1.HTTPS是加密传输协议，HTTP是明文传输协议
+2.HTTPS需要用到SSL（安全套接字层）证书（证书可以认为就是公钥），而HTTP不用
+3.HTTPS比HTTP更安全，对搜索引擎更友好，利于SEO
+4.HTTPS标准端口443，HTTP标准端口80
+5.HTTPS基于传输层，HTTP基于应用层
+6.HTTPS在浏览器显示绿色安全锁，HTTP没有显示
+
+#### 证书
+
+1.证书可以认为就是公钥
+2.在HTTPS通信中，需要CA认证中心的证书以及服务器的证书和私钥
+3.服务器的证书是用来发送给客户端的
+4.CA认证中心的证书需要安装在客户机上，用来验证服务器证书的真实性
+
+#### 数字签名
+
+1.对明文进行哈希，得到一串哈希值
+2.对第一步得到的哈希值进行私钥加密
+数字签名就是对服务器信息进行哈希，然后用CA认证中心的私钥加密的结果
+
+#### 数字证书
+
+包含两部分内容：
+1.服务器信息
+2.数字签名
+
+
