--- a/_posts/2019-10-16-设计模式.md
+++ b/_posts/2019-10-16-设计模式.md
@@ -19,6 +19,7 @@ tags: 设计模式 阅读笔记
 - [原型模式](#list_4)
 - [适配器模式](#list_5)
 - [桥接模式](#list_6)
+- [DRY、KISS、YAGNI三原则的理解](#list_10)
 
 <https://www.jianshu.com/c/c3f6140b8315>  
 <https://www.cnblogs.com/chengjundu/p/8473564.html>  
@@ -52,6 +53,15 @@ public:
 	void FuncOfB();
 };
 ```  
+
+### <span></span>SOLID原则
+
+SRP 单一责任原则（一个方法只做一件事）
+OCP 开放封闭原则（对拓展开放，对修改关闭）
+LSP 里氏替换原则（所有基类出现的地方都可以用派生类替换而不会产生错误，子类可以拓展父类的功能，但不能改变父类原有的功能）
+ISP 接口隔离原则（知道越少越好，不需要的接口不依赖，例如电话不需要有通讯录）
+DIP 依赖倒置原则（高级模块不应该依赖低级模块，而是依赖抽象。抽象不能依赖细节，细节要依赖抽象）
+
 
 ### <span id = "list_1"></span>工厂模式  
 
@@ -836,3 +846,9 @@ int main(){
 }
 
 ```
+
+### <span id = "list_10"></span>DRY、KISS、YAGNI三原则的理解
+
+DRY(Don't repeat yourself)：项目中减少重复性代码  
+KISS(Keep it simple & stupid)：保持简单易懂  
+YAGNI(You ain't gonna need it)：不进行过度设计（未来可期但不过度）  
