--- a/_posts/2019-09-05-Redis阅读笔记.md
+++ b/_posts/2019-09-05-Redis阅读笔记.md
@@ -24,24 +24,25 @@ tags: Redis 阅读笔记
 
 ### 2.redis数据类型：string、hash、list、set和zset（sorted set：有序集合）
 
-- string 最大存储512MB，可以包含任何数据（eg：jpg图片、序列化的对象）
+- string 二进制安全的字符串，最大存储512MB，可以包含任何数据（eg：jpg图片、序列化的对象）
 - hash(即map)每个可以存储2^32-1键值对
-- list(双向链表)可插入列表的前后，可以存储2^32-1元素
-- set（哈希表实现）string类型的无序集合，每个集合可以存储2^32-1元素
-- zset权重值score排序） string类型的有序集合
+- list(双向链表)可插入列表的前后，可以存储2^32-1元素（这里是使用Linked Lists（链表）实现的list，不同于其它的使用数组实现的list）
+- set（哈希表实现）string类型的不重复且无序集合，每个集合可以存储2^32-1元素
+- zset权重值score排序） string类型的有序集合（类似set，但是每个字符串元素都关联到一个叫score浮动数值，里面的元素总是通过score进行着排序，所以不同的是，它可以检索一系列元素）
     - 当items内容大于64时redis sorted set采用hash和skiplist两种设计方式。为了排序和查找做的优化。
-    
     - 添加删除skiplist，复杂度O(log(n))
     - 查找元素直接hash，复杂度O(1) 
-    - 其它range操作，复制度O(log(n))
+    - 其它range操作，复杂度O(log(n))
     - items小于64采用ziplist设计，复杂度O(n)
-
+- bit arrays（simply bitmaps），通过特殊的命令，可以将string值当做一系列bits处理，可以设置和清除单独的bits，数出所有设为1的bits的数量，找到最前的被设为1或0的bit
+- hyperloglogs 这是被用于估计一个set元素数量的概率性的数据结构
 
 ### 3.redis数据库之前不完全隔离（不适用于多个应用建立不同的数据库）
 
 - redis非常轻量级，空redis实例占用内存1M左右
 
 ### 4.hyperloglog用来做基数统计的算法
+
 - 优点：元素数量及体积非常大时计算所需的空间总是固定且很小（基数eg:{1,3,5,<u>7</u>,6,<u>7</u>,8}的基数{1,3,5,<u>7</u>,6,8}）
 
 ### 5.redis事务
