--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -231,7 +231,10 @@ const(
 - 函数调用，参数都会创建一个副本（不同于其它语言的引用），这样就会拷贝一次值（`指针、slice、map函数和通道channel也是值拷贝`，只是包含了引用类型或者是可以通过包含的类型修改实参值。例如slice包含指向底层数组的指针，这就能改变到底层数组）
 - q := [...]int{1,2,3}省略号“...”出现在数组长度的位置，表示输出长度由初始化的元素个数决定    
 - r := [...]int{9:-1} 定义10个数据，最后一个数据的值是-1，其余默认值0。由最大的index决定
-- mapArr := [...][4]int{{3, 3, 4, 6}, {3, 3, 4, 6}, {3, 3, 4, 6}, {3, 3, 4, 6}}; //二维数组同其它需指定第2维度长度  
+- 二维数组同其它需指定第2维度长度 
+```go
+    mapArr := [...][4]int{{3, 3, 4, 6}, {3, 3, 4, 6}, {3, 3, 4, 6}, {3, 3, 4, 6}}
+``` 
 - 数组是可以比较（`数据类型`跟`元素个数`一致的情况下才能比较，比较的是元素值。不同类型或不同元素个数比较会编译错误）  
 - 切片slice有3个属性指针、长度和容量。（切片，即可视作是数组的一个`子片的引用`）
     - 指针是指向该切片的第1个元素（`并非底层的数组的首元素`）
