--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1136,6 +1136,28 @@ func main() {
 	fmt.Printf("%v, %[1]T\n", x.(int)) //10, int  直接断言x是int类型
 ```
 
+- 空的interface可以接受任何类型的参数，但是interface{}类型的slice（[]interface{}）不能接受任何类型的slice。但可以通过遍历转化（深度复制，转化为interface来进行转化）
+
+```go
+package main  
+
+import "fmt"
+
+func printAll(vals []interface{}) {
+    for _, val := range vals {
+        fmt.Println(val)
+    }
+}
+
+func main() {
+    names := []string{"hello", "world"}
+    printAll(names)
+}
+
+结果：
+cannot use names (type []string) as type []interface {} in argument to printAll
+```
+
 - flag.Parse() 命令行参数解析
 <https://www.jianshu.com/p/f9cf46a4de0e>
 
@@ -2986,7 +3008,4 @@ func main() {
 }
 
 ```
-
-
-
 
