--- a/_posts/2020-06-12-编程方法论.md
+++ b/_posts/2020-06-12-编程方法论.md
@@ -11,3 +11,7 @@ tags: rpc 方法论
 ### 模块化
 
 	在编程过程中，抽象合模块化是将复杂问题简化的通用手段。当代码`语句变多`时，可以将相似的代码封装到一个个函数中；当程序中的函数变多时，将函数拆分到不同的文件或模块中。而模块化编程的核心是面向程序接口编程（API的概念）。
+
+### 抽屉理论
+	大多数原理。一个班级60个人，有一个秘密已告知了31个人，那么随便再挑选30个人，那么必定有一个人知道这个秘密。
+
