--- a/_posts/2019-12-23-MySQL笔记.md
+++ b/_posts/2019-12-23-MySQL笔记.md
@@ -71,6 +71,8 @@ mysql> set transaction isolation level
 例子详解：  
 <https://www.cnblogs.com/wyaokai/p/10921323.html>
 
+锁详解：
+<https://www.hollischuang.com/archives/943>
 
 ### 数据库回滚  
 
