伪共享内存

--- a/_posts/2019-12-23-MySQL笔记.md
+++ b/_posts/2019-12-23-MySQL笔记.md
@@ -207,11 +207,10 @@ Mysql无法自动解析这个方程式，所以索引无效，最好的习惯是
 以下同样问题：  
 mysql> select ... where TO_DAYS(CURRENT_DATE) - TO_DAYS(date_col) <= 10;  
 
+### 数据日志mysqlbinlog
 
-
-
-
-
+<https://www.cnblogs.com/moonandstar08/p/8476228.html>
+<https://blog.csdn.net/u010002184/article/details/78996283>
 
 
 
