伪共享内存

--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2825,6 +2825,33 @@ pb :=  (*int16)(unsafe.Pointer(tmp))
 *pb = 42
 ```
 
+golang中的三个指针类型
+其实指针有三种：
+一种是我们常见的*，用*去表示的指针；
+一种是unsafe.Pointer，Pointer是unsafe包下的一个类型；
+最后一种是uintptr，uintptr 这玩意是可以进行运算的也就是可以++–；
+
+他们之间有这样的转换关系：
+\*<=> unsafe.Pointer <=> uintptr
+有一点要注意的是，uintptr 并没有指针的语义，意思就是 uintptr 所指向的对象会被 gc 无情地回收。而 unsafe.Pointer 有指针语义，可以保护它所指向的对象在“有用”的时候不会被垃圾回收.
+
+```go
+func main() {
+    s := make([]int, 10)
+    s[1] = 2
+    
+    p := &s[0]
+    fmt.Println(*p)
+    
+    up := uintptr(unsafe.Pointer(p)) //这里有可能会被回收 所以最好写成 (*int)unsafe.Pointer（uintptr(unsafe.Pointer(p))+unsafe.Sizeof(int(0))）
+    up += unsafe.Sizeof(int(0)) // 这里不是up++
+
+    p2 := (*int)(unsafe.Pointer(up))
+    fmt.Println(*p2)
+}
+```
+
+
 #### Go判断结构体是否实现了指定接口
 
 在go中想知道某个结构体（有人称为类）是否实现了某个接口类型，如下例子：  
@@ -3009,3 +3036,23 @@ func main() {
 
 ```
 
+#### 原子性操作 atomic
+
+一个或者多个操作在 CPU 执行的过程中不被中断的特性，称为原子性（atomicity） 。
+
+`Mutex`由`操作系统`实现，而`atomic`包中的原子操作则由`底层硬件`直接提供支持。在CPU实现的指令集里，有一些指令被封装进了atomic包，这些指令在执行的过程中是不允许中断（interrupt）的，
+因此原子操作可以在`lock-free`的情况下保证并发安全，并且它的性能也能做到随CPU个数的增多而线性扩展。
+
+<https://studygolang.com/articles/23242?fr=sidebar>
+
+#### 性能分析，死锁分析
+
+runtime/pprof
+
+eg:
+go tool pprof http://0.0.0.0:63603/debug/pprof/heap
+ 
+web直接打开  http://0.0.0.0:63603/debug/pprof
+
+<https://www.jianshu.com/p/162f44022eb7>
+<https://jvns.ca/blog/2017/09/24/profiling-go-with-pprof/>
