--- a/_posts/2021-01-15-伪共享内存.md
+++ b/_posts/2021-01-15-伪共享内存.md
@@ -25,3 +25,16 @@ cpu核心数据越多出现的频率越大。
 - I（无效，Invalid）：缓存行失效, 不能使用。
 
 <https://www.cnblogs.com/cyfonly/p/5800758.html>
+
+
+### go 中伪共享示例
+
+``` go
+type poolLocal struct {
+	poolLocalInternal
+
+	// Prevents false sharing on widespread platforms with
+	// 128 mod (cache line size) = 0 .
+	pad [128 - unsafe.Sizeof(poolLocalInternal{})%128]byte
+}
+```
