--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -13,3 +13,5 @@ tags: 名词 内存 解析
 	RSS是进程实际驻存在物理内存的部分的大小。因为一个进程执行不需要把整个进程都全部驻存到物理内存。RSS是最常用的内存指标，表示进程占用的物理内存大小。但是，将各进程的RSS值相加，通常会超出整个系统的内存消耗，这是因为RSS中每个进程都包含了各进程间共享的内存，因此存在重叠部分。
 - PSS（Proportional set size）实际使用的物理内存（比例分配共享库占用的内存）
 - USS（Unique set size）进程独自占用的物理内存（不包含共享库占用的内存）
+- RRT（Round-Trip Time）
+- TTL (Time To Live) 生存时间。TTL的作用是限制IP数据包在计算机网络中的存在的时间。TTL的最大值255，TTL的一个推荐值是64。
