--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -15,3 +15,6 @@ tags: 名词 内存 解析
 - USS（Unique set size）进程独自占用的物理内存（不包含共享库占用的内存）
 - RRT（Round-Trip Time）
 - TTL (Time To Live) 生存时间。TTL的作用是限制IP数据包在计算机网络中的存在的时间。TTL的最大值255，TTL的一个推荐值是64。
+- QPS(Query Per Second 每秒钟查询数量) 服务器每秒钟处理请求数量（req/sec 请求数/秒 一段时间内总请求数/请求时间）
+- 事务（Transactions） 用户一次或者几次请求的集合
+- TPS（Transactions Per Second 每秒钟处理事务数量） 服务器每秒种处理事务数量（一个事务可能包括多个请求）
