--- a/_posts/2022-04-14-Linux常用命令.md
+++ b/_posts/2022-04-14-Linux常用命令.md
@@ -31,3 +31,48 @@ smakry@iMac ~ % ls | tee | wc -l
 ```shell
 smakry@iMac ~ % ls | tee -i ls.log
 ```
+
+2. top 、uptime 、 w 、 vmstat 查看负载 (https://www.jianshu.com/p/1c8dbd8d5411)
+- top
+```shell
+top - 17:15:15 up 581 days,  4:22, 13 users,  load average: 33.38, 16.02, 11.47
+Tasks: 525 total,   3 running, 522 sleeping,   0 stopped,   0 zombie
+%Cpu(s): 42.4 us,  4.1 sy,  0.0 ni, 49.0 id,  4.4 wa,  0.0 hi,  0.1 si,  0.0 st
+KiB Mem : 32819652 total,  2288556 free, 16248584 used, 14282512 buff/cache
+KiB Swap: 16649724 total,  4851512 free, 11798212 used. 15802620 avail Mem 
+
+  PID USER      PR  NI    VIRT    RES    SHR S  %CPU %MEM     TIME+ COMMAND                                                                                                                                        
+13699 root      20   0 2040164 1.222g 293820 D 112.0  3.9   0:03.94 link                                                                                                                                           
+10637 root      20   0 3432712 1.894g   1468 S 111.0  6.1  21085:16 ruby                                                                                                                                           
+13650 root      20   0 2039544 1.230g 314452 S  99.3  3.9   0:04.17 link                                                                                                                                           
+13844 root      20   0 1137468 426528   8268 R  92.0  1.3   0:02.77 compile                                                                                                                                        
+ 9253 root      20   0 1321332  37448  10864 S   2.0  0.1   0:02.46 go             
+```
+
+- uptime
+```shell
+ 17:21:01 up 581 days,  4:28, 13 users,  load average: 2.33, 9.43, 10.32
+```
+
+- w
+```shell
+ 17:19:43 up 581 days,  4:26, 13 users,  load average: 5.53, 12.00, 11.16
+USER     TTY      FROM             LOGIN@   IDLE   JCPU   PCPU WHAT
+root     pts/0    10.30.40.180     31Mar22 46.00s 13:32   0.04s -bash
+root     pts/1    10.30.40.180     02Apr22  6days  0.10s  0.10s -bash
+root     pts/2    172.16.22.148    11:47    4:57m  0.01s  0.00s ssh 172.16.22.111
+root     pts/3    10.30.40.180     31Mar22 45:08   0.59s  0.02s -bash
+root     pts/4    10.30.40.180     Tue20   39:00   0.04s  0.02s ssh 172.16.22.76
+root     pts/5    10.30.40.180     Mon14    4days  0.05s  0.05s -bash
+root     pts/6    10.30.40.180     Tue12    3days  0.02s  0.01s ssh 172.16.22.76
+
+```
+
+- vmstat
+```shell
+procs -----------memory---------- ---swap-- -----io---- -system-- ------cpu-----
+ r  b   swpd   free   buff  cache   si   so    bi    bo   in   cs us sy id wa st
+ 1  0 11798288 4951320 2822864 10987028    1    1    51   207    0    0 20  1 79  0  0
+```
+
+- 查看cpu核数（cat /proc/cpuinfo） mac 系统可以用 sysctl -a ｜ grep core
