--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -2188,6 +2188,8 @@ func Instance() *singleton {
         - OS线程由OS内核来调度。每隔几毫秒，一个硬件时钟中断发到CPU，CPU调用一个叫调度器的内核函数。这个函数暂停当前正在运行的线程，把它的寄存器信息保存在内存，查看线程列表并决定接下来运行哪个线程，再从内存恢复线程的注册表信息，最后继续执行选中的线程。因为OS线程由内核来调度，所以控制权限从一个线程到另外一个线程需要一个完整的`上下文切换`：即保存一个线程的状态到内存，再恢复另外一个线程的状态，最后更新调度器的数据结构。考虑这个操作涉及的内存局域性以及涉及的内存访问数量，还是有访问内存所需要的CPU周期数量的增加，这个操作是很慢的。（需要`切换内存及缓存`？）
         - Go包含一个自己的调度器，这个调度器使用一个称为`m:n调度`的技术（因为它可以复用/调度m个goroutine到n个OS线程）。Go调度器与内核调度器的工作类似，但Go调度器`只需关心单个Go程序的goroutine调度问题`。Go调度器不是由硬件时钟来定期触发的，而是由特定的Go语言结构来触发的。比如当一个goroutine调用time.Sleep或者被通道阻塞或对互斥量操作时，调度器就会将这个goroutine设为休眠模式，并运行其它goroutine直到前一个可重新唤醒为止。因为它`不需要切换到内核语境`，所以调用一个goroutine比调度一个线程成本低很多。（单个Go程序的调度相对系统级别量少很多）。
     - **GOMAXPROCS**：Go调度器使用GOMAXPROCS参数来确定需要使用多少个OS线程来同时执行Go代码。`默认值是机器上的CPU数量`，所以在一个有8个CPU的机器上，调度器会把Go代码同时调度到8个OS线程上。（GOMAXPROCS是m:n调度中的n）正在休眠或者正被通道通信阻塞的goroutine不需要占用线程。阻塞在I/O和其它系统调用中或调用非Go语言写的函数的goroutine需要一个独立的OS线程，但这个线程不计算在GOMAXPROCS内。
+        - go 的 goroutins 当 GOMAXPROCS = 1时 goroutines 都是在一个线程上运行，通过不断让出时间片轮流执行（runtime.Gosched()让出时间片）
+        - 当一个 goroutine 发生阻塞，go 会将处于同一个系统线程的其它 goroutine 转移到另外一个系统线程上面，以使这些 goroutines 不会阻塞
     - **goroutine没有标识**：
 
 - go扩展包<http://godoc.org>
@@ -2198,6 +2200,8 @@ func Instance() *singleton {
     - $go list smakry.io/gospace/... //指定的子树的所有包
     - $go list ...xml... //具体的主题可用包
     - $go list -json hash //JSON格式输出每一个包的完整记录
+
+- context 在 goroutines 之间进行信号传递、值传递、设置截止时间（`处于相同进程中的 goroutines`，意味着不能跨进程），通过channel来做到信号同步？
 
 ### go test工具
 
