--- a/_posts/2019-10-29-IO模型阅读笔记.md
+++ b/_posts/2019-10-29-IO模型阅读笔记.md
@@ -43,6 +43,7 @@ tags: I/O模型 阅读笔记
 
 ### <span id = "list_2"></span> 3.I/O复用  
 
+原来进程跟连接是1:1对应，单机系统进程资源有限，改造为1:n，这即多路复用。(有限的资源下通过复杂的调度实现资源的最大使用？)
 商场吃饭取了多个号，其中一个号到了就会通知你。同样也需要自己去取餐。
 
 ![I/O多路复用](https://github.com/smakry/smakry.github.io/raw/master/imags/IO%E5%A4%9A%E8%B7%AF%E5%A4%8D%E7%94%A8.png)    
