--- a/_posts/2022-04-14-Linux常用命令.md
+++ b/_posts/2022-04-14-Linux常用命令.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 'Linux常用命令'
-date: 2022-04-02
+date: 2022-04-14
 author: smakry
 tags: Linux 常用命令
 ---
@@ -76,3 +76,60 @@ procs -----------memory---------- ---swap-- -----io---- -system-- ------cpu-----
 ```
 
 - 查看cpu核数（cat /proc/cpuinfo） mac 系统可以用 sysctl -a ｜ grep core
+
+3. iostat 查看系统IO情况
+```shell
+smakry@MacBook-Pro demo % iostat -c 1 10
+              disk0       cpu    load average
+    KB/t  tps  MB/s  us sy id   1m   5m   15m
+   22.18   10  0.23   6  9 85  4.61 5.44 5.65
+    5.92 8279 47.89  13 27 60  5.18 5.54 5.68
+    7.59   39  0.29  12 24 64  5.15 5.52 5.67
+   31.21  325  9.91  13 21 66  5.23 5.52 5.67
+```
+
+4. nload 用来及时监控网络状态和各IP所使用的频宽
+
+nload 默认分为上下两块：
+上半部分是：Incoming也就是进入网卡的流量
+下半部分是：Outgoing，也就是从这块网卡出去的流量
+
+每部分都有当前流量（Curr）
+平均流量（Avg）
+最小流量（Min）
+最大流量（Max）
+总和流量（Ttl）
+
+```shell
+Device en0 [172.20.10.4] (7/21):
+===============================================================================================================================================
+Incoming:
+
+                                                                                                 Curr: 7.83 kBit/s
+                                                                                                 Avg: 12.70 kBit/s
+                                                                                                 Min: 0.00 Bit/s
+                                                                                                 Max: 62.05 kBit/s
+                                                                                                 Ttl: 2.78 GByte
+Outgoing:
+
+                                                                                                 Curr: 7.83 kBit/s
+                                                                                                 Avg: 8.28 kBit/s
+                                                                                                 Min: 0.00 Bit/s
+                                                                                                 Max: 46.54 kBit/s
+                                                                                                 Ttl: 543.57 MByte
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
