python api docker

--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -18,3 +18,4 @@ tags: 名词 内存 解析
 - QPS(Query Per Second 每秒钟查询数量) 服务器每秒钟处理请求数量（req/sec 请求数/秒 一段时间内总请求数/请求时间）
 - 事务（Transactions） 用户一次或者几次请求的集合
 - TPS（Transactions Per Second 每秒钟处理事务数量） 服务器每秒种处理事务数量（一个事务可能包括多个请求）
+- TLS（Transport Layer Security 安全传输层）
