--- a/_posts/2022-04-18-Docker.md
+++ b/_posts/2022-04-18-Docker.md
@@ -22,3 +22,8 @@ registry.wll:5000/wulala/wll-builder                  1.0                       
 smakry@iMac ~ % docker tag system:develop registry.wll:5000/wulala/system:develop
 smakry@iMac ~ % docker push registry.wll:5000/wulala/system:develop
 ```
+
+3. 创建golang环境docker
+```sh
+docker run -it --rm -p 8000:8000 --workdir /workspace golang
+```
