git delete commit

--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1088,6 +1088,94 @@ func main() {
 ```
 
 - Go封装一个对象，必须使用结构体（通过大小写是否导出），Go封装的单元是包而不是类型
+1. 对于结构体
+```go
+type Person struct {
+    age int
+}
+
+// 接收者也是值类型
+func (p Person) howOld() int {
+    return p.age
+}
+
+// 接收者是指针类型
+func (p *Person) growUp() {
+    p.age += 1
+}
+
+func main() {
+    // qcrao 是值类型
+    qcrao := Person{age: 18}
+
+    // 值类型 调用接收者也是值类型的方法
+    fmt.Println(qcrao.howOld())
+
+    // 值类型 调用接收者是指针类型的方法
+    qcrao.growUp()
+    fmt.Println(qcrao.howOld())
+
+    // stefno 是指针类型
+    stefno := &Person{age: 100}
+
+    // 指针类型 调用接收者是值类型的方法
+    fmt.Println(stefno.howOld())
+
+    // 指针类型 调用接收者也是指针类型的方法
+    stefno.growUp()
+    fmt.Println(stefno.howOld())
+}
+```
+
+实际上，当类型和方法的接收者类型不同时，编译器在背后做了一些工作：
+a. 值接收者
+    - 值类型调用者：方法会使用调用者的一个副本，类似于“传值”
+    - 指针类型调用者：`指针被解引用为值`，上例中，stefno.howOld()实际上是(\*stefno).howOld()
+b. 指针接收者：
+    - 值类型调用者：`使用值的引用来调用方法`，上例中，qcrao.growUp()实际上是(&qcrao).growUp()
+    - 指针类型调用者：实际上也是“传值”，方法里的操作会影响到调用者，类似于指针传参数，拷贝了一份指针
+
+2. 对于接口
+```go
+package main
+
+import "fmt"
+
+type coder interface {
+    code()
+    debug()
+}
+
+type Gopher struct {
+    language string
+}
+
+func (p Gopher) code() {
+    fmt.Printf("I am coding %s language\n", p.language)
+}
+
+func (p *Gopher) debug() {
+    fmt.Printf("I am debuging %s language\n", p.language)
+}
+
+func main() {
+    var c coder = &Gopher{"Go"}
+    c.code()
+    c.debug()
+
+    var c2 coder = Gopher{"Go"}
+    // c2.code() // 开启后会抛错，并没有实现code
+    // c2.debug()
+}
+```
+
+例子中 &Gopher{"Go"} 与 Gopher{"Go"} 差异，c实现了coder的2个方法，c2并没有实现coder的方法。原因是接收者是指针类型的方法，可能会在方法中对接收者对属性进行更改操作，从而影响接收者。
+而对于接收者是值类型的方法，在方法中不会对接收者本身产生影响。
+
+结论：
+a. 实现了接收者是值类型的接口方法，相当于自动实现了接收者是指针类型的方法（如上的c）
+b. 实现了接收者是指针类型的接口方法，不会自动实现对应接收者是值类型的方法（如上的c2）
+
 
 - sublime-text安装 <https://www.iteye.com/blog/gxl-ct001-2441108>  
 自定义主题 <http://tmtheme-editor.herokuapp.com/#!/editor/local/Monokai>
