--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -19,3 +19,23 @@ tags: 名词 内存 解析
 - 事务（Transactions） 用户一次或者几次请求的集合
 - TPS（Transactions Per Second 每秒钟处理事务数量） 服务器每秒种处理事务数量（一个事务可能包括多个请求）
 - TLS（Transport Layer Security 安全传输层）
+- 二进制大小端
+	- Big-Endian: 低地址存放高位
+	```sh
+	低地址
+	buf[0] (0x12) -- 高位字节
+	buf[1] (0x34)
+	buf[2] (0x56)
+	buf[3] (0x78) -- 低位字节
+	高地址
+	```
+
+	- Little-Endian: 低地址存放低位
+	```sh
+	低地址
+	buf[0] (0x78) -- 低位字节
+	buf[1] (0x56)
+	buf[2] (0x34)
+	buf[3] (0x12) -- 高位字节
+	高地址
+	```
