--- a/_posts/2022-04-24-git删除提交节点.md
+++ b/_posts/2022-04-24-git删除提交节点.md
@@ -16,12 +16,12 @@ commit C
 ========== 要删除commit B，不使用revert的方式，因为revert方式是重新提交一次会生成一个新的记录
 
 # 确定分支所处位置
-root@dev02:/data/jenkins-work/workspace/develop/client# git branch
+smakry@iMac /data/jenkins-work/workspace/develop/client% git branch
 * develop
 
 # git log找到对应要删除的commit B 早一次的提交 commit A 的提交记录 (bcb533a6e674879ad45910e2ec283c125b7d47f1) 
 # git rebase -i commit A^  (这里的^是看到其它的记录)
-root@dev02:/data/jenkins-work/workspace/develop/client# git rebase -i bcb533a6e674879ad45910e2ec283c125b7d47f1^
+smakry@iMac /data/jenkins-work/workspace/develop/client% git rebase -i bcb533a6e674879ad45910e2ec283c125b7d47f1^
 # 命令执行后，这个过程中会出现rebase的操作文件
 ==========================
 # pick bcb533a commit B  # 此提交记录即为要删除的记录，注释掉即可，保存退出
@@ -50,9 +50,9 @@ When you have resolved this problem, run "git rebase --continue".
 If you prefer to skip this patch, run "git rebase --skip" instead.
 To check out the original branch and stop rebasing, run "git rebase --abort".
 Could not apply 394fbe92fddcdb49b6ff1ca3320e641c248ff754... add client templates
-root@dev02:/data/jenkins-work/workspace/develop/client# git add . # 解决冲突并提交
-root@dev02:/data/jenkins-work/workspace/develop/client# git rebase --continue # 继续rebase（期间可能还有冲突，继续解决再rebase）
-root@dev02:/data/jenkins-work/workspace/develop/client# git push origin develop --force # 推送到仓库
+smakry@iMac /data/jenkins-work/workspace/develop/client% git add . # 解决冲突并提交
+smakry@iMac /data/jenkins-work/workspace/develop/client% git rebase --continue # 继续rebase（期间可能还有冲突，继续解决再rebase）
+smakry@iMac /data/jenkins-work/workspace/develop/client% git push origin develop --force # 推送到仓库
 Locking support detected on remote "origin". Consider enabling it with:
   $ git config lfs.https://git.wll/wulala/client.git/info/lfs.locksverify true
 Uploading LFS objects: 100% (28/28), 3.7 MB | 0 B/s, done                                                                                                                                                     
@@ -64,6 +64,6 @@ Total 1217 (delta 1035), reused 470 (delta 399)
 remote: Resolving deltas: 100% (1035/1035), completed with 138 local objects.
 To ssh://git@git.wll:2289/wulala/client.git
  + 03d4791...2d1ddba develop -> develop (forced update)
-root@dev02:/data/jenkins-work/workspace/develop/client# git branch
+smakry@iMac /data/jenkins-work/workspace/develop/client% git branch
 * develop
 ```
