--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1176,6 +1176,8 @@ func main() {
 a. 实现了接收者是值类型的接口方法，相当于自动实现了接收者是指针类型的方法（如上的c）
 b. 实现了接收者是指针类型的接口方法，不会自动实现对应接收者是值类型的方法（如上的c2）
 
+3. 两者分别在何时使用
+如果方法的接收者是值类型，无论调用者是对象还是对象指针，`修改的都是对象的副本`，不影响调用者；如果方法的接收者是指针类型，则调用者修改的是指针指向的对象本身。
 
 - sublime-text安装 <https://www.iteye.com/blog/gxl-ct001-2441108>  
 自定义主题 <http://tmtheme-editor.herokuapp.com/#!/editor/local/Monokai>
