--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -39,3 +39,6 @@ tags: 名词 内存 解析
 	buf[3] (0x12) -- 高位字节
 	高地址
 	```
+- 反向代理（Reverse Proxy）代理端代理的是服务端
+- 正向代理，代理端是客户端，例如：翻墙软件、OpenVPN
+- LVS(Linux Virtual Server)Linux虚拟服务器
