--- a/_posts/2020-03-01-rpc.md
+++ b/_posts/2020-03-01-rpc.md
@@ -54,13 +54,13 @@ Go语言RPC实例
 <https://blog.csdn.net/qun_y/article/details/89598014> 
 
 
+### gRPC
+https://www.grpc.io/docs/languages/go/quickstart/
 
-
-
-
-
-
-
+```shell
+export PATH="$PATH:$(go env GOPATH)/bin"
+protoc --go_out=. --go-grpc_out=. proto/*.proto
+```
 
 
 
