--- a/_posts/2020-03-01-rpc.md
+++ b/_posts/2020-03-01-rpc.md
@@ -55,6 +55,25 @@ Go语言RPC实例
 
 
 ### gRPC
+
+1. 数据流
+gRPC中的stream就是一种流，可以不断的推送数据，适合传输大数据，或者客户端服务端长时间交互，比如客户端可以向服务端订阅一个数据，服务端就可以利用stream源源不断推送数据
+
+
+2. gRPC四种数据流
+- 简单模式
+最传动，客户端发起一次请求，服务端响应一次数据
+
+- 服务端数据流模式
+客户端发起一次请求，服务端返回一段连续的数据流，典型的股票，客户端发起请求一个股票，服务端把股票的实时数据源源不断的返回给客户端
+
+- 客户端数据流模式
+客户端源源不断向服务端发送数据流，在发送结束后，由服务端返回一个响应。典型的物联网终端向服务器报送数据
+
+- 双向数据流模式
+双端可以向对方发送数据流，可以实现实时交互，典型的例子聊天机器人
+
+
 https://www.grpc.io/docs/languages/go/quickstart/
 
 ```shell
