--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -20,7 +20,7 @@ tags: 名词 内存 解析
 - 事务（Transactions） 用户一次或者几次请求的集合
 - TPS（Transactions Per Second 每秒钟处理事务数量） 服务器每秒种处理事务数量（一个事务可能包括多个请求）
 - TLS（Transport Layer Security 安全传输层）
-- 二进制大小端
+- 二进制大小端 (https://www.jianshu.com/p/b598ede612d8)
 	- Big-Endian: 低地址存放高位
 	```sh
 	低地址
@@ -45,3 +45,6 @@ tags: 名词 内存 解析
 - LVS(Linux Virtual Server)Linux虚拟服务器
 - OLTP（On-line Transaction Processing）联机事务处理
 - OLAP（On-line Analytical Processing）联机分析处理
+- OSS（Object Storage Service 对象存储）
+- slab Linux操作系统的一种内存分配机制
+- DSL（Digital Subscriber Line 数字用户线路）
