--- a/_posts/2022-04-24-git删除提交节点.md
+++ b/_posts/2022-04-24-git删除提交节点.md
@@ -67,3 +67,8 @@ To ssh://git@git.wll:2289/wulala/client.git
 smakry@iMac /data/jenkins-work/workspace/develop/client% git branch
 * develop
 ```
+
+
+```shell
+git remote show wulala | grep -v "refs/remotes/wulala/" | grep "@lxd" | grep -v "f" | cut -d " " -f5 | xargs git push wulala --delete
+```
