--- a/_posts/2022-04-18-Docker.md
+++ b/_posts/2022-04-18-Docker.md
@@ -27,3 +27,8 @@ smakry@iMac ~ % docker push registry.wll:5000/wulala/system:develop
 ```sh
 docker run -it --rm -p 8000:8000 --workdir /workspace golang
 ```
+
+4. mac docker 容器内访问主机
+https://zmis.me/user/zmisgod/post/1645
+
+host.docker.internal
