--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -3145,5 +3145,31 @@ go tool pprof http://0.0.0.0:63603/debug/pprof/heap
  
 web直接打开  http://0.0.0.0:63603/debug/pprof
 
+```sh
+smakry@iMac /tmp % go tool pprof /Users/smakry/Downloads/allocs-1839 
+File: game_server
+Build ID: f3b8b970191d708b1ba4b448980c83ee9c16feb0
+Type: alloc_space
+Time: Jun 14, 2022 at 11:16am (CST)
+Entering interactive mode (type "help" for commands, "o" for options)
+(pprof) web
+```
+
 <https://www.jianshu.com/p/162f44022eb7>
 <https://jvns.ca/blog/2017/09/24/profiling-go-with-pprof/>
+
+
+2. 火焰图
+教程： https://github.com/hyper0x/go_command_tutorial/blob/master/0.12.md
+<https://blog.csdn.net/raoxiaoya/article/details/118493465>
+```sh
+smakry@iMac /tmp % go tool pprof http://localhost:58820/debug/pprof/heap
+Fetching profile over HTTP from http://localhost:58820/debug/pprof/heap
+Saved profile in /Users/smakry/pprof/pprof.alloc_objects.alloc_space.inuse_objects.inuse_space.025.pb.gz
+Type: inuse_space
+Time: Jun 14, 2022 at 11:37am (CST)
+Entering interactive mode (type "help" for commands, "o" for options)
+(pprof) q
+smakry@iMac /tmp % go tool pprof -http localhost:3001 /Users/smakry/pprof/pprof.alloc_objects.alloc_space.inuse_objects.inuse_space.025.pb.gz
+Serving web UI on http://localhost:3001
+```
