--- a/_posts/2022-03-29-Go pprof.md
+++ b/_posts/2022-03-29-Go pprof.md
@@ -46,6 +46,11 @@ smakry@iMac /tmp % go tool pprof -http localhost:3001 /Users/smakry/pprof/pprof.
 Serving web UI on http://localhost:3001
 ```
 
+3. cpu
+```sh
+http://localhost:6060/debug/pprof/profile\?seconds=60
+```
+
 ### 数据项分析
 
 ```go
