--- a/_posts/2022-03-29-Go pprof.md
+++ b/_posts/2022-03-29-Go pprof.md
@@ -30,8 +30,11 @@ Entering interactive mode (type "help" for commands, "o" for options)
 <https://www.jianshu.com/p/162f44022eb7>
 <https://jvns.ca/blog/2017/09/24/profiling-go-with-pprof/>
 
+2. 
+2.1 在线运行设置GC与上次使用时的百分比（ debug.SetGCPercent(百分比) ）
+2.2 debug.FreeOSMemory() 强制返还给系统
 
-2. 火焰图
+3. 火焰图
 教程： https://github.com/hyper0x/go_command_tutorial/blob/master/0.12.md
 <https://blog.csdn.net/raoxiaoya/article/details/118493465>
 ```sh
