--- a/_posts/2022-06-18-内存管理.md
+++ b/_posts/2022-06-18-内存管理.md
@@ -53,8 +53,27 @@ tags: 内存分配 垃圾收集 栈内存管理
     - 存在引用，导致内存无法被垃圾收集收集并清除
     - 子对象遍历释放资源，同时执行垃圾回收
 
+### go GC
 
+1. Golang GC大部分处理和用户代码并行
+2. GC过程可能会有新的对象分配和指针赋值，这个过程会STW。
+3. GC会`扫描`全局指针和栈
+4. GC清扫工作上一轮结束才回开始新的一轮
+5. 辅助GC（GC回收的速度跟不上用户代码分配对象的速度？）
+    扫描后回收速度跟不上分配的速度，会暂停用户线程，同时抢占用户线程加入垃圾回收，这就是辅助回收。
+6. GC 时机：
+    - 内存分配达到阀值。每次分配内存都会检查当前内存分配量是否达到阀值。（阀值=上次GC内存分配量 x 内存增长率） （内存增长率：debug.SetGCPercent(百分比)）
+    - 定时触发GC，默认2分钟触发一次
+    - 手动触发（runtime.GC()）
 
+### go GC调优
+1. 减少对象的分配，合理重复利用
+2. 避免string与[]byte转化（两者发生转化的时候，底层数据结构会进行复制，导致GC效率变低）
+3. 少量使用+连接string。（string是只读类型，针对它的操作都会创建新的string。少量文本拼接用“+”即可；大量小文本拼接用string.Join；大量大文本拼接用bytes.Buffer）
+
+### go 程序内存占用大的问题
+1. go的垃圾回收有触发阀值，阈值会随着内存的使用变大而逐渐增大（当阈值增大后，大块内存申请无法通过阈值触发GC）。
+2. go交还内存给系统知识告诉系统这些内存不需要使用了，可以回收。系统没有立即回收，等内存紧张时才会开始回收。（可以强制返还给系统：debug.FreeOSMemory()）
 
 
 
