--- a/_posts/2022-07-02-全球同服设计.md
+++ b/_posts/2022-07-02-全球同服设计.md
@@ -12,4 +12,4 @@ tags: 游戏 全球同服 架构设计
 
 1. bigworld架构
 2. 数据库读写剥离单独的数据库读写服务，提供单独的逻辑服务器用于滑动更新吗
-3. 服务设计图 ![architecture](https://github.com/smakry/drawio/blob/master/architecture.drawio.png)
+3. 服务设计图 ![architecture](https://github.com/smakry/smakry.github.io/blob/master/imags/architecture.drawio.png)
