--- a/_posts/2019-09-09-GO.md
+++ b/_posts/2019-09-09-GO.md
@@ -1957,6 +1957,127 @@ func main() {
 }
 ```
 
+- 优雅关闭channel
+1. 一个sender，一个receiver （直接在sender端关闭即可）
+2. 一个sender，多个receiver （直接在sender端关闭即可）
+3. 多个sender，一个receiver 
+    - 增加一个传递`关闭信号的channel`，receiver通过信号channel下达关闭数据channel指令，sender端监听到关闭信号，停止发送数据
+    - 利用GC优雅的回收channel（非关闭信号的channel）
+```go
+func main() {
+    rand.Seed(time.Now().UnixNano())
+
+    const Max = 100000
+    const NumSenders = 1000
+
+    dataCh := make(chan int, 100)
+    stopCh := make(chan struct{})
+
+    // senders
+    for i := 0; i < NumSenders; i++ {
+        go func() {
+            for {
+                select {
+                case <- stopCh:
+                    return
+                case dataCh <- rand.Intn(Max):
+                }
+            }
+        }()
+    }
+
+    // the receiver
+    go func() {
+        for value := range dataCh {
+            if value == Max-1 {
+                fmt.Println("send stop signal to senders.")
+                close(stopCh)
+                return
+            }
+
+            fmt.Println(value)
+        }
+    }()
+
+    select {
+    case <- time.After(time.Hour):
+    }
+}
+```
+4. 多个sender，多个receiver（由一个中间的close来管理，发送跟接收都听从这个中间人）
+```go
+func main() {
+    rand.Seed(time.Now().UnixNano())
+
+    const Max = 100000
+    const NumReceivers = 10
+    const NumSenders = 1000
+
+    dataCh := make(chan int, 100)
+    stopCh := make(chan struct{})
+
+    // It must be a buffered channel.
+    toStop := make(chan string, 1)
+
+    var stoppedBy string
+
+    // moderator
+    go func() {
+        stoppedBy = <-toStop
+        close(stopCh)
+    }()
+
+    // senders
+    for i := 0; i < NumSenders; i++ {
+        go func(id string) {
+            for {
+                value := rand.Intn(Max)
+                if value == 0 {
+                    select {
+                    case toStop <- "sender#" + id:
+                    default:
+                    }
+                    return
+                }
+
+                select {
+                case <- stopCh:
+                    return
+                case dataCh <- value:
+                }
+            }
+        }(strconv.Itoa(i))
+    }
+
+    // receivers
+    for i := 0; i < NumReceivers; i++ {
+        go func(id string) {
+            for {
+                select {
+                case <- stopCh:
+                    return
+                case value := <-dataCh:
+                    if value == Max-1 {
+                        select {
+                        case toStop <- "receiver#" + id:
+                        default:
+                        }
+                        return
+                    }
+
+                    fmt.Println(value)
+                }
+            }
+        }(strconv.Itoa(i))
+    }
+
+    select {
+    case <- time.After(time.Hour):
+    }
+}
+```
+5. 总结以上的本质，就是不要往关闭的channel发送消息
+
 - Go互斥锁（sync.Mutex）和读写锁（sync.RWMutex）
 
 1.什么时候需要用到锁？  
