--- a/_posts/2022-07-02-全球同服设计.md
+++ b/_posts/2022-07-02-全球同服设计.md
@@ -13,3 +13,14 @@ tags: 游戏 全球同服 架构设计
 1. bigworld架构
 2. 数据库读写剥离单独的数据库读写服务，提供单独的逻辑服务器用于滑动更新吗
 3. [服务设计图](https://github.com/smakry/smakry.github.io/blob/master/imags/architecture.drawio.png)
+4. 协议：
+    - TCP或者HTTP，弱联网模型只需要HTTP
+    - 同时使用TCP和HTTP，客户端连接服务端采用HTTP，多人战斗转向TCP。战斗服需要长链接保存协议状态用TCP
+    - UDP，高效率的场景下使用，比如PVP即时战斗，TCP的拥塞控制和超时重传不合适，用UDP，自己做丢包重发
+    - websocket
+5. 集群组负载均衡
+    - 基于linux内核做的负载均衡才是王道
+    - apache 并发场景不适用
+    - nginx 高并发场景下适用
+6. 防DDOS攻击，大量低价便宜的网关服务器，很多IP很多PORT，登录成功后随机分配可用端口
+
