--- a/_posts/2022-04-24-git删除提交节点.md
+++ b/_posts/2022-04-24-git删除提交节点.md
@@ -72,3 +72,84 @@ smakry@iMac /data/jenkins-work/workspace/develop/client% git branch
 ```shell
 git remote show wulala | grep -v "refs/remotes/wulala/" | grep "@lxd" | grep -v "f" | cut -d " " -f5 | xargs git push wulala --delete
 ```
+
+
+### git submodule 子模块
+
+1. 创建子模块
+
+```sh
+# 在entirety下增加子模块 client。
+smakry@iMac entirety % git submodule add ssh://git@git.wll:2289/funnymon/client.git client
+# 会在当前仓库下添加子模块文件 .gitmodules 。 无该文件需要手动添加
+smakry@iMac entirety % ls -al
+total 16
+drwxr-xr-x   6 smakry  staff  192  7 16 16:03 .
+drwxr-xr-x   5 smakry  staff  160  7 16 16:01 ..
+drwxr-xr-x  13 smakry  staff  416  7 16 16:05 .git
+-rw-r--r--   1 smakry  staff   86  7 16 16:03 .gitmodules
+-rw-r--r--   1 smakry  staff   10  7 16 16:01 READEME.md
+drwxr-xr-x   4 smakry  staff  128  7 16 16:03 client
+# 这个时候会直接拉到子模块相关文件到 client
+smakry@iMac client % ls
+README.md
+```
+
+2. 拉取带子模块仓库
+```sh
+# 使用clone方式并不能把包含子模块的仓库拉取下来
+smakry@MacBook-Pro funnymon % git clone ssh://git@git.wll:2289/funnymon/entirety.git
+# 查看子模块
+smakry@MacBook-Pro entirety % git submodule
+ 18ddb9661608af4bb985faa5d4d0d78676a04021 client (heads/master)
+ # 递归拉取子模块（子模块可能还有子模块）
+smakry@MacBook-Pro entirety % git submodule update --init --recursive
+```
+
+3. 子模块添加子模块
+```sh
+# 在client 下添加子模块 framework
+smakry@MacBook-Pro client % git submodule add ssh://git@git.wll:2289/wulala/db-framework.git DataBase/framework
+Cloning into '/Users/smakry/funnymon/entirety/client/DataBase/framework'...
+remote: Enumerating objects: 117, done.
+remote: Counting objects: 100% (117/117), done.
+remote: Compressing objects: 100% (83/83), done.
+remote: Total 709 (delta 69), reused 66 (delta 32), pack-reused 592
+Receiving objects: 100% (709/709), 188.75 KiB | 808.00 KiB/s, done.
+Resolving deltas: 100% (425/425), done.
+smakry@MacBook-Pro client % ls
+DataBase  README.md
+# 子模块添加提交到远端
+smakry@MacBook-Pro client % git add .
+smakry@MacBook-Pro client % git commit -m "client submodule add db-framework"
+[detached HEAD dc9e5a9] client submodule add db-framework
+ 2 files changed, 4 insertions(+)
+ create mode 100644 .gitmodules
+ create mode 160000 DataBase/framework
+smakry@MacBook-Pro client % git push origin HEAD:master
+```
+
+```sh
+# 主仓库的子模块添加子模块更新仓库，主仓库下更新远端
+smakry@iMac entirety % git submodule update --remote --recursive
+remote: Enumerating objects: 5, done.
+remote: Counting objects: 100% (5/5), done.
+remote: Compressing objects: 100% (3/3), done.
+remote: Total 4 (delta 0), reused 0 (delta 0), pack-reused 0
+Unpacking objects: 100% (4/4), done.
+From ssh://git.wll:2289/funnymon/client
+   18ddb96..dc9e5a9  master     -> origin/master
+Submodule path 'client': checked out 'dc9e5a921f1f2ed3faff71c63522a469b28879b8'
+```
+
+4. 修改远端仓库指代名字（origin）
+```sh
+smakry@iMac entirety % git remote -v
+origin  ssh://git@git.wll:2289/funnymon/entirety.git (fetch)
+origin  ssh://git@git.wll:2289/funnymon/entirety.git (push)
+# 远端仓库名从 origin 修改为 funnymon 
+smakry@iMac entirety % git remote rename origin funnymon
+smakry@iMac entirety % git remote -v
+funnymon  ssh://git@git.wll:2289/funnymon/entirety.git (fetch)
+funnymon  ssh://git@git.wll:2289/funnymon/entirety.git (push)
+```
