--- a/_posts/2022-07-02-全球同服设计.md
+++ b/_posts/2022-07-02-全球同服设计.md
@@ -23,4 +23,8 @@ tags: 游戏 全球同服 架构设计
     - apache 并发场景不适用
     - nginx 高并发场景下适用
 6. 防DDOS攻击，大量低价便宜的网关服务器，很多IP很多PORT，登录成功后随机分配可用端口
-
+7. 服务器划分原则：
+    - 分离游戏中占用系统资源（CPU、内存、IO等）较多的功能，独立服务
+    - 多线程并发的编程方式适应多核处理器
+    - 宁可服务器之间多复制数据，也要保持清晰的数据流向（数据拷贝，逻辑清晰，逻辑上可能需要牺牲。若是功能模块之前数据复制保证清晰流向是好方式）
+    - 
