--- a/_posts/2022-04-24-git删除提交节点.md
+++ b/_posts/2022-04-24-git删除提交节点.md
@@ -153,3 +153,9 @@ smakry@iMac entirety % git remote -v
 funnymon  ssh://git@git.wll:2289/funnymon/entirety.git (fetch)
 funnymon  ssh://git@git.wll:2289/funnymon/entirety.git (push)
 ```
+
+5. 忽略文件已进入版本库处理（删除本地缓存，后提交到远端）
+```sh
+# 删除本地缓存
+smakry@iMac entirety % git rm -r --cached .
+```
