--- a/_posts/2022-04-23-ddd领域驱动设计.md
+++ b/_posts/2022-04-23-ddd领域驱动设计.md
@@ -43,3 +43,11 @@ paper-code/examples/groupevent
 │   └── golang.org/
 ├── go.mod
 ├── go.sum
+
+### 微服务架构和CQRS架构
+
+1. 微服务：
+    - 业务角度拆分（职责分离）
+    - 服务之间交互通过SOA RPC调用（耦合比较高）{SOA:面向服务的架构}
+    - 通过EDA消息驱动（耦合比较低）{EDA:事件驱动架构}
+2. 
