--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -13,7 +13,7 @@ tags: 名词 内存 解析
 	RSS是进程实际驻存在物理内存的部分的大小。因为一个进程执行不需要把整个进程都全部驻存到物理内存。RSS是最常用的内存指标，表示进程占用的物理内存大小。但是，将各进程的RSS值相加，通常会超出整个系统的内存消耗，这是因为RSS中每个进程都包含了各进程间共享的内存，因此存在重叠部分。
 - PSS（Proportional set size）实际使用的物理内存（比例分配共享库占用的内存）
 - USS（Unique set size）进程独自占用的物理内存（不包含共享库占用的内存）
-- RRT（Round-Trip Time）
+- RTT（Round-Trip Time）往返时延
 - TTL (Time To Live) 生存时间。TTL的作用是限制IP数据包在计算机网络中的存在的时间。TTL的最大值255，TTL的一个推荐值是64。
 - QPS（Query Per Second 每秒钟查询数量) 服务器每秒钟处理请求数量（req/sec 请求数/秒 一段时间内总请求数/请求时间）
 - QoS（Quality of Service）服务质量
@@ -48,3 +48,8 @@ tags: 名词 内存 解析
 - OSS（Object Storage Service 对象存储）
 - slab Linux操作系统的一种内存分配机制
 - DSL（Digital Subscriber Line 数字用户线路）
+- CQS（Command Query Segregation 命令查询分离）
+- CQRS（Command Query Responsibility Segregation 命令查询职责分离）
+- SOA（Service Oriented Architecture 服务导向架构）
+- EDA（Event Driven Architecture 事件驱动架构）
+- ES（Event Sourcing 事件溯源）
