--- a/_posts/2022-04-02-Go版本升级mod.md
+++ b/_posts/2022-04-02-Go版本升级mod.md
@@ -13,3 +13,4 @@ tags: go mod 版本升级
 1. 修改go.mod版本号
 2. 进到对应go.mod根目录执行 `go mod tidy`
 3. 重新编译
+4. vscode mod方式对应的setting go path要与环境变量对应的go path 一致，否则会出现 vscode golint找不到包
