--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -53,3 +53,33 @@ tags: 名词 内存 解析
 - SOA（Service Oriented Architecture 服务导向架构）
 - EDA（Event Driven Architecture 事件驱动架构）
 - ES（Event Sourcing 事件溯源）
+- 命名法则：
+    - 驼峰命名（Camel）
+        - 小驼峰 printEmployeePaychecks()
+        - 大驼峰 PrintEmployeePaychecks()
+    - 匈牙利命名（Hungarian）
+        - 以一个或多个小写字母代表变量作用+下划线开头 g_Interval
+    - 帕斯卡（Pascal）
+        - 大驼峰命名 PrintEmployeePaychecks()
+    - 下划线
+        - print_employee_paychecks()
+- RTO（Recovery Time Object 恢复时间目标）灾难发生后，宕机导致业务停顿之刻开始，到业务恢复两点之间的时间段
+- HZ（赫兹）每秒发生周期波动的次数
+- APQ（Automatic Repeat Request 自动重传请求）OSI模型中数据链路层的错误纠正协议之一
+- NAT（Network Address Translation 网络地址转换）（专有网络访问公网只有一个出口，保护专有网络内的主机）
+    - 宽带分享
+    - 安全防护
+    - 实现方式
+        - 静态转换（内外一一对应）
+        - 动态转换
+        - 端口多路复用（Port address Translation,PAT）
+        - ALG（Application Level Gateway 应用程序级网关）
+
+
+
+
+
+
+
+
+
