--- a/_posts/2022-04-14-Linux常用命令.md
+++ b/_posts/2022-04-14-Linux常用命令.md
@@ -119,7 +119,15 @@ Outgoing:
                                                                                                  Ttl: 543.57 MByte
 ```
 
+5. telnet 登录远程主机的标准协议，主要用来登录远程主机并能够执行主机的一些命令，还可以用来测试网络服务的连通性`telnet 联通性只能测试tcp端口或服务，不能测试udp`
 
+```shell
+# 登录远程主机 (-l 指定用户名)
+telnet -l admin 192.168.31.1
+
+# 测试联通性
+telnet 192.168.31.1 80
+```
 
 
 
