--- a/_posts/2022-07-21-网关.md
+++ b/_posts/2022-07-21-网关.md
@@ -10,3 +10,10 @@ tags: 游戏 网关 负载均衡
 
 1. 端口重用、地址重用
 https://blog.csdn.net/c359719435/article/details/51721902
+
+2. KCP
+
+- 快速可靠协议，相比TCP浪费10%-20%带宽，换取平均延迟30%-40%
+- TCP信道是流速慢，每秒流量大的；KCP流速快，每秒流量小（积压的情况下，小部分更慢，但整体是快）
+- 不管是TCP/KCP 发送窗口大小需要做到缓存控制策略
+    - 可用带宽 = min(本地可用发送窗口大小，远端可用接收窗口大小) * (1 - 丢包率) / RTT
