--- a/_posts/2019-09-11-网络阅读笔记.md
+++ b/_posts/2019-09-11-网络阅读笔记.md
@@ -47,11 +47,12 @@ IP地址={<网络号>,<主机号>}
 
 ![IP地址编址](https://github.com/smakry/smakry.github.io/raw/master/imags/IP%E5%9C%B0%E5%9D%80%E7%BD%91%E7%BB%9C%E5%8F%B7%E5%92%8C%E4%B8%BB%E6%9C%BA%E5%AD%97%E6%AE%B5.png)
 
-1.子网划分  
+1. 子网划分  
 
 `主机号拿出一部分作为子网号`，两级IP地址划分为三级IP地址。  
 IP地址={<网络号>,<子网号>,<主机号>}  
 `要使用子网，必须配置子网掩码`。一个 B 类地址的默认子网掩码为 255.255.0.0，如果 B 类地址的子网占两个比特，那么子网掩码为 11111111 11111111 11000000 00000000，也就是 255.255.192.0。（外部网络是看不到子网的存在）
+
 
 ### TCP的三次握手
 
@@ -175,7 +176,11 @@ TCP Reno的实现是：
         - sshthresh = cwnd  
         - 进入快速恢复算法——Fast Recovery  
 
-- 快恢复  
+- 快恢复
+
+### IP协议
+
+通过TCP协议传输数据，到IP层，肯定不需要分片（TCP本身有限制了数据报大小），只有通过UDP协议传送大数据的时候，需要分片（MTU 最大传送单元限制，所以需要分片）
 
 ### Cookie原理
 
