--- a/_posts/2020-12-02-Etcd与Raft探索.md
+++ b/_posts/2020-12-02-Etcd与Raft探索.md
@@ -9,3 +9,28 @@ tags: Etcd Raft
 > 同步算法
 
 https://blog.51cto.com/5660061/2381641
+
+
+### etcd 租约（lease）
+```sh
+smakry@iMac ~ % etcdctl lease grant 100 // 创建100秒租约
+lease 694d83d04ec96467 granted with TTL(100s)
+smakry@iMac ~ % etcdctl put --lease=694d83d04ec96467 /test/mylease testlease // 租约绑定到key
+OK
+smakry@iMac ~ % etcdctl lease list
+found 4 leases
+694d83d04ec8b315
+694d83d04ec8b30e
+694d83d04ec8b30a
+694d83d04ec96467
+smakry@iMac ~ % etcdctl lease timetolive 694d83d04ec96467 --keys // 查看租约，--keys对应key
+lease 694d83d04ec96467 granted with TTL(100s), remaining(43s), attached keys([/test/mylease])
+smakry@iMac ~ % etcdctl get /test/mylease
+/test/mylease
+testlease
+smakry@iMac ~ % etcdctl lease timetolive 694d83d04ec96467 --keys
+lease 694d83d04ec96467 granted with TTL(100s), remaining(4s), attached keys([/test/mylease])
+smakry@iMac ~ % etcdctl lease timetolive 694d83d04ec96467 --keys
+lease 694d83d04ec96467 granted with TTL(100s), remaining(0s), attached keys([/test/mylease])
+smakry@iMac ~ % etcdctl get /test/mylease       
+```
