--- a/_posts/2022-04-14-Linux常用命令.md
+++ b/_posts/2022-04-14-Linux常用命令.md
@@ -129,7 +129,12 @@ telnet -l admin 192.168.31.1
 telnet 192.168.31.1 80
 ```
 
+6. sz 从服务器下载文件到本地，rz 从本地上传文件到服务器
 
+7. wget 下载文件
+```shell
+wget 'http://rdsbakbucket-japan-v2' -O 'hins100024807_data_20220922153303.rdb'
+```
 
 
 
