--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -74,6 +74,12 @@ tags: 名词 内存 解析
         - 动态转换
         - 端口多路复用（Port address Translation,PAT）
         - ALG（Application Level Gateway 应用程序级网关）
+- MTU（Maximum Transfer Unit 最大传送单元）
+- MSS（Maximum Segement Size 最大报文段长度）
+- ARP（Address Resolution Protocol 地址解析协议），局域网内IP地址获取物理地址的一个TCP/IP协议
+- RARP（Reverse Address Resolution Protocol 反向地址转换协议），允许局域网的物理机器从网关服务器的ARP表或者缓存上请求其IP地址
+- 滑动窗口技术，发送方信息分组`固定一个窗口大小（一个窗口由多个分组组成）`，窗口一次发送，按分组的顺序收到返回后，窗口向右滑动（整体是快，单个分组可能会是慢的）
+- WAL(write ahead log 预写日志系统)
 
 
 
