--- a/_posts/2020-12-02-Etcd与Raft探索.md
+++ b/_posts/2020-12-02-Etcd与Raft探索.md
@@ -34,3 +34,39 @@ smakry@iMac ~ % etcdctl lease timetolive 694d83d04ec96467 --keys
 lease 694d83d04ec96467 granted with TTL(100s), remaining(0s), attached keys([/test/mylease])
 smakry@iMac ~ % etcdctl get /test/mylease       
 ```
+
+```sh
+smakry@iMac ~ % etcdctl lease grant 100                                     
+lease 694d83d04ec9646e granted with TTL(100s)
+smakry@iMac ~ % etcdctl put --lease=694d83d04ec9646e /test/mylease testlease
+OK
+smakry@iMac ~ % etcdctl lease timetolive 694d83d04ec9646e --keys
+lease 694d83d04ec9646e granted with TTL(100s), remaining(67s), attached keys([/test/mylease])
+smakry@iMac ~ % etcdctl get /test/mylease
+/test/mylease
+testlease
+smakry@iMac ~ % etcdctl lease revoke 694d83d04ec9646e // 撤销租约，此时key也会被删除
+lease 694d83d04ec9646e revoked
+smakry@iMac ~ % etcdctl get /test/mylease 
+```
+
+```sh
+smakry@iMac ~ % etcdctl lease grant 100                                          
+lease 694d83d04ec96478 granted with TTL(100s)
+smakry@iMac ~ % etcdctl put --lease=694d83d04ec96478 /test/leasegrant leasegrant
+OK
+smakry@iMac ~ % etcdctl lease list                                              
+found 4 leases
+694d83d04ec8b30a
+694d83d04ec8b30e
+694d83d04ec8b315
+694d83d04ec96478
+smakry@iMac ~ % etcdctl lease timetolive 694d83d04ec96478 --keys
+lease 694d83d04ec96478 granted with TTL(100s), remaining(65s), attached keys([/test/leasegrant])
+smakry@iMac ~ % etcdctl lease keep-alive 694d83d04ec96478 // 刷新TTL保持租约活着
+lease 694d83d04ec96478 keepalived with TTL(100)
+lease 694d83d04ec96478 keepalived with TTL(100)
+.
+.
+.
+```
