--- a/_posts/2019-12-23-MySQL笔记.md
+++ b/_posts/2019-12-23-MySQL笔记.md
@@ -213,9 +213,9 @@ mysql> select ... where TO_DAYS(CURRENT_DATE) - TO_DAYS(date_col) <= 10;
 <https://blog.csdn.net/u010002184/article/details/78996283>
 
 
+### 快照读，数据多版本
 
-
-
+- 已经提交的事务，未提交的事务（处于快照），分开两部分，拆开2部分，快照上锁粒子度比较小 <https://z.itpub.net/article/detail/E0E75B25F001CA1B33E9FAD84CE0CFFC>
 
 
 
