--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -80,8 +80,12 @@ tags: 名词 内存 解析
 - RARP（Reverse Address Resolution Protocol 反向地址转换协议），允许局域网的物理机器从网关服务器的ARP表或者缓存上请求其IP地址
 - 滑动窗口技术，发送方信息分组`固定一个窗口大小（一个窗口由多个分组组成）`，窗口一次发送，按分组的顺序收到返回后，窗口向右滑动（整体是快，单个分组可能会是慢的）
 - WAL(write ahead log 预写日志系统)
-
-
+- 混沌工程：致力于异常行为被触发之前，尽可能识别出会导致异常的、系统中脆弱的、易出故障的环节。混沌工程将故障注入系统以测试系统对其的响应，在宕机发生之前将其影响降至最低。
+    - 非故障类的场景，如流量激增、资源竞争条件、拜占庭故障（例如性能差或有异常的节点发出错误的响应、异常的行为、对调用者随机返回不同的响应等）、非计划中的或消息内容非正常组合的处理等
+- Service Mesh 服务网格，下一代微服务架构方向（例如：Istio框架、网易轻舟）
+- 蓝绿发布（即AB发布），服务AB版本，部分先B升级到A，剩余B继续提供服务，B升级A后，再把剩余的B升级到A
+- 灰度发布，只升级部分
+- 滚动发布，每次升级一个或多个服务，升级后加入生成环境
 
 
 
