--- a/_posts/2020-08-30-负载均衡SLB笔记.md
+++ b/_posts/2020-08-30-负载均衡SLB笔记.md
@@ -31,7 +31,7 @@ tags: 负载均衡 SLB 笔记
 基于传输层的性能要高一点。
 优点：便宜，在正常服务器上部署即可，无需额外采购，需要投入一点技术优化（互联网常用）。
 
-### 常用的均衡算法
+### 常用的均衡算法 <https://z.itpub.net/article/detail/521FC68829D4E355176D585BFFFDFB50>
 
 1.随机策略
 使用随机数来决定转发到哪台机器上，只有数据量达到一定数量，才能真正体现，需要服务器相应效率基本一致
@@ -50,6 +50,40 @@ tags: 负载均衡 SLB 笔记
 
 6.加权随机
 根据权重随机（权重可能来自性能，或者地域等）
+
+### 负载均衡实现在不同的网络模型
+
+1. 二层负载均衡
+工作在数据链路层，通信协议的数据链路层修改mac地址进行负载，原本发到当前ip机器的，修改mac指向后端真正的服务mac，同时只能单向返回不再经过ip机器
+
+2. 三层负载均衡
+基于网络层的负载均衡，按照不同的机器不同ip地址进行转发请求到不同的机器上
+
+3. 四层负载均衡
+通过报文中的目标地址和端口，再加上负载均衡设备设置的服务器选择方式，决定终选择的内部服务器。
+
+4. 七层负载均衡
+也称“内容交换”，主要通过报文中的真正有意义的应用层内容，再加上负载均衡设备设置的服务器选择方式，决定最终选择的内部服务器。七层负载均衡器需要跟客户端及服务端的服务实例分别建立连接
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
