--- a/_posts/2022-04-23-ddd领域驱动设计.md
+++ b/_posts/2022-04-23-ddd领域驱动设计.md
@@ -8,6 +8,27 @@ tags: ddd 领域驱动设计
 
 > 先让代码工作起来，再让他慢慢变好变快
 
+### 微服务存在的问题
+
+- 微服务的粒度
+- 微服务如何设计
+- 微服务如何拆分
+- 微服务边界在哪里
+    微服务拆分的困境根本原因就是不知道业务或者微服务的边界到底在什么地方，换句话说，确定了业务边界和应用边界，困境就迎刃而解。
+    DDD就是解决这个确定业务边界问题。DDD并不是技术架构，而是一种划分业务领域范围的方法论。
+
+### DDD两部分
+
+- 战略设计
+    主要从`业务视角`出发，建立业务领域模型，划分领域边界，建立通用语言的限界上下文，限界上下文可以作为微服务设计的参考边界。模拟某个领域的一种模型，这个模型比较抽象，但便于人们交流
+    例如：一颗桃树的研究
+    ｜    业务    ｜    领域        ｜    聚合                    ｜    实体                    ｜
+    ｜    桃树    ｜桃子、桃花、桃叶..｜分生组织、营养组织、保护组织..  ｜根毛细胞、导管细胞、叶肉细胞..  ｜
+
+
+- 战术设计
+    主要从`技术视角`出发，侧重于领域模型的技术实现，完成软件开发和落地，包括：聚合根、实体、值对象、领域服务、应用服务和资源库等代码逻辑的设计和实现
+
 ### 典型的Go ddd设计理念包设计
 
 paper-code/examples/groupevent
