--- a/_posts/2022-03-29-名词解析.md
+++ b/_posts/2022-03-29-名词解析.md
@@ -40,6 +40,13 @@ tags: 名词 内存 解析
 	buf[3] (0x12) -- 高位字节
 	高地址
 	```
+
+	- 数值转化
+	```go
+	v := uint32(500)
+	fmt.Println(byte(v)) // 转化为byte（=uint8）,只留下最后8bit，也就是 244（111 0100）
+	// fmt.Println(byte(uint32(500))) // panic，溢出
+	```
 - 反向代理（Reverse Proxy）代理端代理的是服务端
 - 正向代理，代理端是客户端，例如：翻墙软件、OpenVPN
 - LVS(Linux Virtual Server)Linux虚拟服务器
@@ -86,6 +93,7 @@ tags: 名词 内存 解析
 - 蓝绿发布（即AB发布），服务AB版本，部分先B升级到A，剩余B继续提供服务，B升级A后，再把剩余的B升级到A
 - 灰度发布，只升级部分
 - 滚动发布，每次升级一个或多个服务，升级后加入生成环境
+- MTTD（Mean Time to Detect，平均探测时间）
 
 
 
